Comply with the C++ standard's (silly?) rule that converting an rvalue to a const reference requires that the copy constructor be accessible.  b=230118  r=bbaetz  sr=roc